--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>color flipper</h1>
+<!--     <h1>color flipper</h1> -->
     <nav>
       <div class="nav-center">
         <h4>color flipper</h4>
